feat: add product bid API
*wip, need product bid accept API
