# backend/swagger-output.json
@@ -252,6 +252,30 @@
         "parameters": [],
         "responses": {}
       }
+    },
+    "/bids": {
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
+    },
+    "/bids/{id}": {
+      "put": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      },
+      "patch": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      },
+      "delete": {
+        "description": "",
+        "parameters": [],
+        "responses": {}
+      }
     }
   }
 }
